outputs/workspace_output_1764313736_750.txt
  File "/workspace/integrate_avatars.py", line 429
    (% if code %)
     ^
SyntaxError: f-string: invalid syntax
